# RetroSaurus

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: screenshots.rs
src/: lib.rs  main.rs  ui.rs
src/thesaurus/: fixture.rs  format.rs  index.rs  mod.rs
src/widgets/: definition_view.rs  layout.rs  mod.rs  search_bar.rs  shared.rs  shell.rs
tests/: navigation.rs  snapshots.rs
tests/common/: mod.rs
